Header of alle page's

--- a/Html/Hoofdpagina.html
+++ b/Html/Hoofdpagina.html
@@ -5,7 +5,7 @@
 	<link rel="stylesheet" href="style.css">
 	<link rel="shortcut icon" type="image/jpg" href=”OIP.jpg”/>
 </head>
-<header>
+<header class="start-header">
 	<div class="menu">
 		<ul class="main-navigation">
 			<li class="menu-item">
